# GoodMarket2Developement

./: .env.example  ADMIN_DASHBOARD_UPDATES.md  ATTRIBUTION_STRICT_FIX_SUMMARY.md  DEPLOYMENT_READY.txt  DOCUMENTATION_INDEX.md  FAUCET_FIX_SUMMARY.md  FINAL_REFERRAL_STATUS.txt  INVESTIGATION_TOPWALLET_DRAINAGE.md  LICENSE  README.md  REFERRAL_ADMIN_GUIDE.md  REFERRAL_FIXES_SUMMARY.md  REFERRAL_FLOW_DIAGRAM.md  REFERRAL_GAS_AND_BALANCE_GUIDE.md  REFERRAL_PROGRAM_AUDIT.md  REFERRAL_QUICK_REFERENCE.md  REFERRAL_TECHNICAL_QNA.md  THREE_QUESTIONS_ANSWERED.md  YOUR_ANSWERS_VISUAL.txt  analytics_service.py  app.py  blockchain.py  collaboration_automation.py  community_stories.py  community_stories_service.py  config.py  discourse_task.py  discourse_task_service.py  faucet_test_checklist.md  goodmarket_attribution_backfill.py  goodmarket_claim_reconciler.py  gunicorn.conf.py  jumble.py  jumble_service.py  learn_and_earn.py  learn_and_earn_service.py  learn_earn_contract_service.py  learn_earn_sponsor_certificate.py  learn_earn_stream_scheduler.py  main.py  (+28 more)
community_stories/: __init__.py  blockchain.py  community_stories_service.py  routes.py
contracts/: DailyTaskRewards.sol  DailyTaskRewards_Flattened.sol  EscrowMarketplace.sol  GDSavings.sol  GoodMarketP2PEscrow.sol  P2P_ESCROW_README.md  achievement_nft_deployment  daily_task_deployment_info.json  deploy_achievement_nft.py  deploy_daily_task_contract.py  deploy_escrow_marketplace.py  deploy_p2p_escrow.py  deploy_savings_contract.py  deploy_unified_treasury.py  p2p_escrow_deployment.json  savings_deployment_info_v4.json  (+1 more)
(+90 files in other folders)
