[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.4",
    "brotlicffi>=1.2.0.1",
    "cryptography>=46.0.6",
    "flask>=3.1.3",
    "flask-compress>=1.24",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "markupsafe>=3.0.3",
    "mmh3>=5.2.1",
    "pillow>=12.2.0",
    "py-solc-x>=2.0.5",
    "pycryptodome>=3.23.0",
    "pydantic>=2.12.5",
    "pyiceberg>=0.11.1",
    "pyjwt>=2.12.1",
    "python-dateutil>=2.9.0.post0",
    "regex>=2026.3.32",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "strictyaml>=1.7.3",
    "supabase>=2.28.3",
    "tenacity>=9.1.4",
    "web3>=7.15.0",
    "websockets>=15.0.1",
]
